Fix deployment API version

--- a/templates/dittybopper.yaml.template
+++ b/templates/dittybopper.yaml.template
@@ -28,7 +28,7 @@ spec:
   port:
     targetPort: 3000
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
